test/files/neg/t7877.check
t7877.scala:6: error: method Y is not a case class, nor does it have an unapply/unapplySeq member
    case Y() => ()             // not allowed
         ^
t7877.scala:7: error: OnNext[Any] does not take parameters
    case OnNext[Any]() => ()   // should *not* be allowed, but was.
                    ^
two errors found
